# scrapping

./: .flake8  .gitignore  README.md  example.ipynb  pagination.html  piso.html  pyproject.toml  requirements.txt  scrapping_house.py  scrapping_ids.py  setup.cfg  utils.py
data/: house_ids.csv  houses_df.csv  ids.html
data/results/: house_ids.csv  houses_df.csv
data/tests/: house.html
dummy_tests/: dummy.ipynb
dummy_tests/html_examples/: nuevo.html  pagination.html  piso2.html  sin_fotos.html
html_examples/: piso.html
src/: main.py  scraping_house.py  scraping_ids.py  scraping_ids_old.py  scrapping_house.py  scrapping_ids.py  utils.py
tests/: test_house.py  test_ids.py
